--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,18 @@ button:hover {
     display: inline-block;
     margin-left: 10px;
 }
+.weather-card {
+    width: 200px;
+    display: flex;
+    text-align: center;
+    padding: 8px;
+    display: inline-block;
+    background-color: #02324C;
+    border: 2px solid #ffffff;
+    margin: 20px 0px;
+    border-radius: 5px;
+    background-image: url('../images/fabric-dark.png');
+}
 .title {
     font-size: 24px;
     color: #02324C;
