--- a/css/main.css
+++ b/css/main.css
@@ -306,23 +306,37 @@ button:hover {
     flex-direction: column;
     height: 250px;
     width: 50%;
-    background: #ffffff;
+    background: transparent;
     padding: 0;
-    box-shadow: 0px 2px 5px 0px rgba(85,85,85,1);
+    box-shadow: 0px 1px 2px 0px rgba(85,85,85,1);
     margin: auto;
+    border: 1px solid #CE7953;
+}
+.weather-horizontal p {
+    line-height: 1.5;
 }
 .weather-content {
     width: 100%;
-    background-color: #ffffff;
+    background-color: transparent;
+    font-weight: bold;
 }
 .weather-media {
     width: 30%;
-    background-color: black;
     float: left;
     height: 100%;
+    margin: auto;
 }
-.weather-data {
-    position: relative;
-    text-align: left;
-    padding: 10px 10px;
+.weather-title {
+    padding: 20px 0px 10px 0px;
+    color: #CE7953;
+    font-weight: bolder;
+}
+.weather-supporting-text {
+    padding: 20px;
+}
+#weather-image {
+    margin-top: 40%;
+}
+#weather-image img {
+    max-width: 60px;
 }
