--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ h4 {
     width: 4%;
     background-color: #02A687;
     float: left;
+    z-index: 1000;
 }
 .sidebar-navigation ul {
     text-align: center;
@@ -175,7 +176,7 @@ button:hover {
 }
 .page-header {
     display: block;
-    position: relative;
+    /* position: relative; */
     margin: 0 auto;
     text-align: center;
     background: #02324C;
@@ -271,6 +272,12 @@ button:hover {
     position: absolute;
     height: 100%;
     left: 19%;
+    width: 100%;
+    background-color: #F1F9FF;
+}
+#airports_map {
+    position: absolute;
+    height: 100%;
     width: 100%;
     background-color: #F1F9FF;
 }
